<resources>
    <string name="alertdialog_message">"%1$s can be terminated suddenly. Because some of permission are managed by %2$s.

 If you want more detailed information, please go to the %3$s"</string>
    <string name="alertdialog_title">Warning</string>
    <string name="appDesc_title">Set whether to allow the applications below to perform certain functions.</string>
    <string name="app_name">Application permissions</string>
    <string name="appdetail_nopermission">No permissions set</string>
    <string name="appdetail_security_settings_appversion">Version</string>
    <string name="application_title">Applications</string>
    <string name="chn_dialog_text">An application is requesting permission to use mobile data or WLAN. Allow?</string>
    <string name="chn_dialog_text_button">Continue</string>
    <string name="dialog_about_button_ok">Confirm</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_datareset_button_cancel">Cancel</string>
    <string name="dialog_datareset_button_ok">OK</string>
    <string name="dialog_datareset_message">Clearing will erase all data. Continue?</string>
    <string name="dialog_datareset_title">Data reset</string>
    <string name="dialog_unsupport_button_ok">OK</string>
    <string name="dialog_unsupport_message">"This device does not support management of permission.

Application will be terminated"</string>
    <string name="dialog_unsupport_title">Unsupported device error</string>
    <string name="dialog_view_setting_button_cancel">Cancel</string>
    <string name="dialog_view_setting_button_ok">OK</string>
    <string name="dialog_view_setting_select_all">Select all</string>
    <string name="dialog_view_setting_title">View by</string>
    <string name="dialog_warning_button_ok">OK</string>
    <string name="dialog_warning_message">"Function Control provides the way to disable permissions of installed application in this phone.

Application could be terminated suddenly or not working well because some of permission was disabled by Function Control.
Notice that for errors or data losses that may occur is the responsibility of the user."</string>
    <string name="dialog_warning_title">Warning</string>
    <string name="do_not_show_again">\u0009Do not show again</string>
    <string name="enable_non_flat_rate_xec">No</string>
    <string name="errordialog_message">The %1$s function in %2$s has been disabled. To enable it, go to Settings > Application permissions.</string>
    <string name="errordialog_title">Function disabled</string>
    <string name="group_info_label_call">Call control</string>
    <string name="group_info_label_hwcontrol">Hardware control</string>
    <string name="group_info_label_location">Location information</string>
    <string name="group_info_label_message">Message</string>
    <string name="group_info_label_personalinfo">Personal information</string>
    <string name="group_info_label_wifi">WLAN control</string>
    <string name="header_category_about">About</string>
    <string name="header_category_appinfo">Application info</string>
    <string name="header_category_management_permission">Management permission</string>
    <string name="header_category_permissions">Permissions</string>
    <string name="menu_view_setting">View by</string>
    <string name="noapplication">No application</string>
    <string name="notification_expanded_text">Manage permissions enabled</string>
    <string name="notification_expanded_title">Function Control</string>
    <string name="notification_ticker_text">Function Control enabled</string>
    <string name="numberof_app_blockedpermission">%s permission is blocked</string>
    <string name="permission_info_des_access_coarse_location">Use location services based on network</string>
    <string name="permission_info_des_access_fine_location">Use location services based on GPS</string>
    <string name="permission_info_des_access_location_extra_commands">Use location services based on provider commands</string>
    <string name="permission_info_des_access_wifi_state">Allows the app to view information about WLAN networking, such as whether WLAN is enabled and name of connected WLAN devices.</string>
    <string name="permission_info_des_autorun">Disable this function to prevent this app from running automatically and to force it to stop running if it has not been used for some time.</string>
    <string name="permission_info_des_bluetooth">Allows the app to configure the local Bluetooth phone, and to discover and pair with remote devices.</string>
    <string name="permission_info_des_bluetooth_admin">Allows the app to view the configuration of the Bluetooth on the phone, and to make and accept connections with paired devices.</string>
    <string name="permission_info_des_call_phone">"Allows the app to call phone numbers without your intervention. This may result in unexpected charges or calls. Note that this doesn't allow the app to call emergency numbers. Malicious apps may cost you money by making calls without your confirmation."</string>
    <string name="permission_info_des_call_privileged">Allows an application to call any phone number, including emergency numbers, without going through the Dialer user interface for the user to confirm the call being placed.</string>
    <string name="permission_info_des_camera">Allows the app to take pictures and videos with the camera. This permission allows the app to use the camera at any time without your confirmation.</string>
    <string name="permission_info_des_change_network_state">Allows the app to connect to and disconnect from WLAN access points and to make changes to device configuration for WLAN networks.</string>
    <string name="permission_info_des_change_wifi_state">Allows the app to connect to and disconnect from WLAN access points and to make changes to device configuration for WLAN networks.</string>
    <string name="permission_info_des_internet">"Allows the app to modify the data about your contacts stored on your phone, including the frequency with which you've called, emailed, or communicated in other ways with specific contacts. This permission allows apps to delete contact data."</string>
    <string name="permission_info_des_nfc">Allows the app to communicate with Near Field Communication (NFC) tags, cards, and readers.</string>
    <string name="permission_info_des_read_calendar">"Allows an application to read all calendar events stored on your phone, including those of friends or coworkers. A malicious application with this permission can extract personal information from these calendars without the owners' knowledge."</string>
    <string name="permission_info_des_read_call_log">"Allows the app to read your phone's call log, including data about incoming and outgoing calls. This permission allows apps to save your call log data, and malicious apps may share call log data without your knowledge."</string>
    <string name="permission_info_des_read_contacts">"Allows the app to read data about your contacts stored on your phone, including the frequency with which you've called, emailed, or communicated in other ways with specific individuals. This permission allows apps to save your contact data, and malicious apps may share contact data without your knowledge."</string>
    <string name="permission_info_des_read_profile">Allows an application to read the user personal profile data.</string>
    <string name="permission_info_des_read_sms">Allows the app to read SMS messages stored on your phone or SIM card. This allows the app to read all SMS messages, regardless of content or confidentiality.</string>
    <string name="permission_info_des_receive_mms">Allows application to receive and process MMS messages. Malicious applications may monitor your messages or delete them without showing them to you.</string>
    <string name="permission_info_des_receive_sms">Allows application to receive and process SMS messages. Malicious applications may monitor your messages or delete them without showing them to you.</string>
    <string name="permission_info_des_record_audio">Allows the app to record audio with the microphone. This permission allows the app to record audio at any time without your confirmation.</string>
    <string name="permission_info_des_send_sms">Allows the app to send SMS messages. This may result in unexpected charges. Malicious apps may cost you money by sending messages without your confirmation.</string>
    <string name="permission_info_des_unknown" />
    <string name="permission_info_des_write_calendar">"Allows an application to send event invitations as the calendar owner and add, remove, change events that you can modify on your device, including those of friends or co-workers. A malicious application with this permission can send spam emails that appear to come from calendar owners, modify events without the owners' knowledge, or add fake events."</string>
    <string name="permission_info_des_write_call_log">"Allows the app to modify your phone's call log, including data about incoming and outgoing calls. Malicious apps may use this to erase or modify your call log."</string>
    <string name="permission_info_des_write_contacts">"Allows the app to modify the data about your contacts stored on your phone, including the frequency with which you've called, emailed, or communicated in other ways with specific contacts. This permission allows apps to delete contact data."</string>
    <string name="permission_info_des_write_profile">Allows an application to write (but not read) the user personal profile data.</string>
    <string name="permission_info_des_write_sms">Allows the app to write to SMS messages stored on your phone or SIM card. Malicious apps may delete your messages.</string>
    <string name="permission_info_label_access_coarse_location">Use networks</string>
    <string name="permission_info_label_access_fine_location">Use GPS satellites</string>
    <string name="permission_info_label_access_location_extra_commands">Use provider commands</string>
    <string name="permission_info_label_access_wifi_state">view WLAN connections</string>
    <string name="permission_info_label_auto_run">Auto Run</string>
    <string name="permission_info_label_bluetooth">Use Bluetooth</string>
    <string name="permission_info_label_bluetooth_admin">Use Bluetooth Admin</string>
    <string name="permission_info_label_boot">Auto run</string>
    <string name="permission_info_label_call_phone">Make calls</string>
    <string name="permission_info_label_call_privileged">call privileged</string>
    <string name="permission_info_label_camera">Use camera</string>
    <string name="permission_info_label_change_fine_location">change fine location</string>
    <string name="permission_info_label_change_network_state">Use mobile data</string>
    <string name="permission_info_label_change_wifi_state">Use WLAN</string>
    <string name="permission_info_label_internet">Access Internet</string>
    <string name="permission_info_label_nfc">Use NFC</string>
    <string name="permission_info_label_read_calendar">read calendar events plus confidential information</string>
    <string name="permission_info_label_read_call_log">Read call logs</string>
    <string name="permission_info_label_read_contacts">Read contacts</string>
    <string name="permission_info_label_read_profile">read profile</string>
    <string name="permission_info_label_read_sms">Read SMS and MMS</string>
    <string name="preference_about">About</string>
    <string name="preference_data_reset">Data reset</string>
    <string name="preference_data_reset_sub">Reset all settings and delete all data</string>
    <string name="preference_switch_capability_manager">Manage permissions</string>
    <string name="preference_warning_message_mode">Warning message</string>
    <string name="preference_warningmode_button_cancel">Cancel</string>
</resources>