<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:id="@android:attr/theme" android:paddingLeft="16.0dip" android:paddingTop="11.0dip" android:paddingRight="12.0dip" android:paddingBottom="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/appDesc_title" />
    <TextView android:id="@android:attr/label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/application_title" style="?android:attr/listSeparatorTextViewStyle" />
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@android:id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/noapplicationicon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/img_noitems" />
        <TextView android:textSize="22.0dip" android:textColor="@color/text_noapplication" android:gravity="center_horizontal" android:id="@id/noapplicationtext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/noapplication" />
    </LinearLayout>
</LinearLayout>
